Fix layout issues by adjusting dimensions and padding in CSS

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
     color: white;
 }
 #main{
-    height: 60vh;
+    
     width: 100vw
 897.6px
 ;
@@ -40,7 +40,7 @@ h1{
 }
 
 #winner-box{
-    padding-top: 100px;
+
     display:flex ;
     justify-content: center;
     align-items: center;
@@ -55,6 +55,7 @@ h1{
 
 #play-again{
     padding-left: 700px;
+    padding-top: 50px;
     
 }
 .hidden{
@@ -68,6 +69,7 @@ h1{
 #reset-box {
   display: flex;
   justify-content: center;
+  padding-bottom: 20px;
  
 }
 
